--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ comments: false
     <div class="columns">
         <div class="column two-thirds" >
             <ol class="repo-list">
-              {% for post in site.posts %}
+              {% for post in paginator.posts %}
               {% if paginator.page == 1 %}
               {% if post.topmost == true %}
               <li class="repo-list-item">
@@ -213,6 +213,16 @@ comments: false
         {% endif %}
         </div>
     </div>
+    <div class="pagination">
+      {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path }}" class="previous">上一页</a>
+      {% endif %}
+      <span class="page_number">第 {{ paginator.page }} 页 / 共 {{ paginator.total_pages }} 页</span>
+      {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path }}" class="next">下一页</a>
+      {% endif %}
+    </div>
+
     <!-- /pagination -->
 </section>
 <!-- /section.content -->
