修改分页的显示css

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ comments: false
         {% endif %}
         </div>
     </div>
-    <div class="pagination">
+    <!-- <div class="pagination">
       {% if paginator.previous_page %}
         <a href="{{ paginator.previous_page_path }}" class="previous">上一页</a>
       {% endif %}
@@ -221,7 +221,7 @@ comments: false
       {% if paginator.next_page %}
         <a href="{{ paginator.next_page_path }}" class="next">下一页</a>
       {% endif %}
-    </div>
+    </div> -->
 
     <!-- /pagination -->
 </section>
